probability map created oo

--- a/experiments/docker/process/structure_play.ipynb
+++ b/experiments/docker/process/structure_play.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,6 +64,7 @@
     "        self.cached_dir = repo_path / 'cached_data'\n",
     "        self.cached_dir.mkdir(parents=True, exist_ok=True) # create cached dir in root\n",
     "        self.slices_dir = self.cached_dir / 'slices'\n",
+    "        self.probs_dir = self.cached_dir / 'probs'\n",
     "        # load all folds models\n",
     "        self.md = USSegmentation(self.checkpoint_dir)\n",
     "        load_success = self.md.load_model()\n",
@@ -126,12 +127,24 @@
     "        \n",
     "        return shape\n",
     "\n",
-    "    # def prob_map():"
+    "    def prob_map(self, image_path:Path):\n",
+    "        \"\"\"create a probability map for a given image path\n",
+    "\n",
+    "        Args:\n",
+    "            image_path (Path): path of the nrrd original image\n",
+    "        \"\"\"\n",
+    "        original_shape = self.save_slices(image_path) # save slices and get original shape\n",
+    "        prob_map = self.md.process_image(slices_dir=self.slices_dir, original_shape=original_shape)\n",
+    "        # save the prob map as numpy array\n",
+    "        np.save(self.probs_dir / 'prob_map.npy', prob_map)\n",
+    "\n",
+    "    # def seed_definition():\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -148,15 +161,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Explore examples"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +171,7 @@
        "PosixPath('/home/ricardo/ABUS2023_documents/tdsc_abus23/input/DATA_101.nrrd')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,175 +184,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 348/348 [00:02<00:00, 128.11it/s]\n"
+      "100%|██████████| 348/348 [00:02<00:00, 129.36it/s]\n",
+      "Processing slices: 100%|██████████| 11/11 [00:13<00:00,  1.20s/it]\n",
+      "Processing slices: 100%|██████████| 11/11 [00:10<00:00,  1.10it/s]\n",
+      "Processing slices: 100%|██████████| 11/11 [00:10<00:00,  1.07it/s]\n",
+      "Processing slices: 100%|██████████| 11/11 [00:10<00:00,  1.08it/s]\n",
+      "Processing slices: 100%|██████████| 11/11 [00:10<00:00,  1.08it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The shape of the accumulated mask is torch.Size([348, 2, 512, 512])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 348/348 [00:01<00:00, 281.60it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The shape of the final output is (348, 682, 865)\n"
      ]
     }
    ],
    "source": [
-    "original_shape = segmenter.save_slices(image_path)"
+    "segmenter.prob_map(image_path=image_path)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now the probability map must be created"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def process_image(self, input_image):\n",
-    "    image = self.test_transform({\"image\": input_image})[\"image\"]\n",
-    "    image = image.to(device=self.device).unsqueeze(0)\n",
-    "    input_h_flipped = self.h_flip(image)\n",
-    "    final_output = torch.zeros((1, 4, 256, 256), dtype=torch.float32).to(self.device)\n",
-    "    for i in range(5):\n",
-    "        self.models[i].eval()\n",
-    "        outputs = self.models[i](image, True, 256)\n",
-    "        outputs_h_flip = self.models[i](input_h_flipped, True, 256)\n",
-    "\n",
-    "        output_masks_t = (outputs['masks'] + self.h_flip(outputs_h_flip['masks'])) / 2\n",
-    "        final_output += output_masks_t\n",
-    "\n",
-    "    output_masks = torch.argmax(torch.softmax(final_output / 5, dim=1), dim=1, keepdim=True)\n",
-    "\n",
-    "    return output_masks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The number of slices is 350\n"
-     ]
-    }
-   ],
-   "source": [
-    "# get all files in the folder in a list, only mha files\n",
-    "slice_files = [file for file in os.listdir(segmenter.slices_dir) if file.endswith('.mha')] # unordered files\n",
-    "slice_files = sorted(slice_files, key=lambda x: int(x.split('.')[0].split('_')[1]))\n",
-    "\n",
-    "# create final paths\n",
-    "image_files = np.array([segmenter.slices_dir / i for i in slice_files])\n",
-    "db_val = ABUS_test(transform=segmenter.md.test_transform,list_dir=image_files)   \n",
-    "valloader = DataLoader(db_val, batch_size=32, shuffle=False, num_workers=12, pin_memory=True)\n",
-    "print(f'The number of slices is {len(db_val)}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 11/11 [00:10<00:00,  1.03it/s]\n",
-      "100%|██████████| 11/11 [00:10<00:00,  1.03it/s]\n",
-      "100%|██████████| 11/11 [00:11<00:00,  1.00s/it]\n",
-      "100%|██████████| 11/11 [00:10<00:00,  1.02it/s]\n",
-      "100%|██████████| 11/11 [00:11<00:00,  1.01s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The shape of the accumulated mask is torch.Size([350, 2, 512, 512])\n"
-     ]
-    }
-   ],
-   "source": [
-    "num_classes = segmenter.md.num_classes\n",
-    "image_size = segmenter.md.image_size\n",
-    "device = segmenter.md.device\n",
-    "\n",
-    "# 2. Create probability volume\n",
-    "accumulated_mask = torch.zeros((len(db_val),num_classes+1,image_size,image_size)) # store final mask per patient\n",
-    "\n",
-    "for model in segmenter.md.models: # for each model learned\n",
-    "\n",
-    "    model_mask = [] # for appending slices of same model\n",
-    "    for sample_batch in tqdm(valloader):\n",
-    "        with torch.no_grad():\n",
-    "            # get data\n",
-    "            image_batch = sample_batch[\"image\"].to(device)\n",
-    "            # forward and losses computing\n",
-    "            outputs = model(image_batch, True, image_size)\n",
-    "            # stack the masks\n",
-    "            model_mask.append(outputs['masks'].detach().cpu())\n",
-    "    # stack tensors in a single one\n",
-    "    model_mask = torch.cat(model_mask, dim=0)\n",
-    "    accumulated_mask += model_mask\n",
-    "print(f'The shape of the accumulated mask is {accumulated_mask.shape}')\n",
-    "\n",
-    "# get the mean\n",
-    "accumulated_mask /= len(segmenter.md.models)\n",
-    "accumulated_mask = torch.softmax(accumulated_mask, dim=1)[:,1] # get lesion probability\n",
-    "accumulated_mask = accumulated_mask.cpu().numpy()\n",
-    "\n",
-    "# reshape each slice\n",
-    "x_expansion = 865\n",
-    "y_expansion = 865\n",
-    "resized_mask = []\n",
-    "for slice_num in tqdm(range(accumulated_mask.shape[0])):\n",
-    "    im_slice = accumulated_mask[slice_num,:,:]\n",
-    "    im_slice = Image.fromarray(im_slice)\n",
-    "    im_slice_comeback = torchvision.transforms.Resize(\n",
-    "        (x_expansion, y_expansion),\n",
-    "        interpolation= torchvision.transforms.InterpolationMode.BILINEAR, # bilineal or nearest? probs bilineal\n",
-    "        )(im_slice)\n",
-    "    resized_mask.append(im_slice_comeback)\n",
-    "# stack all slices\n",
-    "resized_mask = np.stack(resized_mask, axis=0)\n",
-    "# get original size and save\n",
-    "final_mask = resized_mask[:,:original_shape[1],:original_shape[0]]\n",
-    "print(f'The shape of the final output is {final_mask.shape}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 350/350 [00:01<00:00, 316.10it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The shape of the resized mask is (350, 865, 865)\n",
-      "The shape of the final output is (350, 682, 865)\n"
-     ]
-    }
-   ],
-   "source": [
-    "saving_path = saving_dir  / f'MASK_{pat_id}.nii.gz'\n",
-    "\n",
-    "# save the mask as nii.gz\n",
-    "sitk.WriteImage(sitk.GetImageFromArray(final_mask), str(saving_path), True, 0)"
+    "Explore examples"
    ]
   }
  ],
