working segmentation pipe

--- a/experiments/docker/process/structure_play.ipynb
+++ b/experiments/docker/process/structure_play.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,8 @@
     "from segmentation import USSegmentation\n",
     "from datasets_utils.datasets import ABUS_test\n",
     "from torch.utils.data import DataLoader\n",
-    "import torchvision"
+    "import torchvision\n",
+    "from scipy.ndimage import label, generate_binary_structure"
    ]
   },
   {
@@ -51,10 +52,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def lcc(mask:np.array):\n",
+    "    \"\"\"generate largest connected component of a mask\n",
+    "\n",
+    "    Args:\n",
+    "        mask (np.array): multi object mask\n",
+    "\n",
+    "    Returns:\n",
+    "        np.array: array containing only the largest connected component\n",
+    "    \"\"\"\n",
+    "    # Define the structuring element for connected component analysis\n",
+    "    structuring_element = generate_binary_structure(3, 1)  # 3x3x3 connectivity\n",
+    "\n",
+    "    # Perform connected component labeling\n",
+    "    labeled_mask, _ = label(mask, structure=structuring_element)\n",
+    "\n",
+    "    # Find the size of each connected component\n",
+    "    component_sizes = np.bincount(labeled_mask.ravel())\n",
+    "\n",
+    "    # Identify the label of the largest component (excluding background)\n",
+    "    largest_component_label = np.argmax(component_sizes[1:]) + 1\n",
+    "\n",
+    "    # Create a new mask containing only the largest component\n",
+    "    largest_component_mask = labeled_mask == largest_component_label\n",
+    "    # transform boolean to int\n",
+    "    largest_component_mask = largest_component_mask.astype(np.uint8)\n",
+    "\n",
+    "    return largest_component_mask\n",
+    "\n",
     "class lesion_seg:\n",
     "    def __init__(self):\n",
     "        self.input_dir = Path('./input/') if docker_running else repo_path / 'input'\n",
@@ -65,6 +94,7 @@
     "        self.cached_dir.mkdir(parents=True, exist_ok=True) # create cached dir in root\n",
     "        self.slices_dir = self.cached_dir / 'slices'\n",
     "        self.probs_dir = self.cached_dir / 'probs'\n",
+    "        self.seed_dir = self.cached_dir / 'seed'\n",
     "        # load all folds models\n",
     "        self.md = USSegmentation(self.checkpoint_dir)\n",
     "        load_success = self.md.load_model()\n",
@@ -138,13 +168,82 @@
     "        # save the prob map as numpy array\n",
     "        np.save(self.probs_dir / 'prob_map.npy', prob_map)\n",
     "\n",
-    "    # def seed_definition():\n",
-    "\n"
+    "    def seed_definition(self):\n",
+    "        \"\"\"constructs and saves seed using the probability map already saved by prob_map method\n",
+    "        \"\"\"\n",
+    "\n",
+    "        # HP\n",
+    "        top_hat = 0.0001\n",
+    "        # create seed dir\n",
+    "        saving_dir_name = f'seed'\n",
+    "        saving_dir = self.cached_dir / saving_dir_name\n",
+    "        saving_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "        # load probs\n",
+    "        probs = np.load(self.probs_dir / 'prob_map.npy')\n",
+    "\n",
+    "        # create seed\n",
+    "        seed = np.zeros_like(probs)\n",
+    "\n",
+    "        # use top values as seed\n",
+    "        valid_pixels = probs>(np.max(probs)-top_hat)\n",
+    "        seed[valid_pixels] = 1\n",
+    "        seed = seed.astype(np.uint8)\n",
+    "\n",
+    "        # get lcc\n",
+    "        seed = lcc(seed)\n",
+    "\n",
+    "        # save as numpy\n",
+    "        saving_path = saving_dir / 'seed.npy'\n",
+    "        np.save(saving_path, seed)\n",
+    "                \n",
+    "\n",
+    "    def postprocess(self):\n",
+    "        # HP\n",
+    "        high_threshold = 0.65\n",
+    "\n",
+    "        # load seed array\n",
+    "        seed = np.load(self.seed_dir / 'seed.npy')\n",
+    "        probs = np.load(self.probs_dir / 'prob_map.npy')\n",
+    "\n",
+    "        # use high_threshold on prob map\n",
+    "        possible_pixels = probs>high_threshold\n",
+    "        possible_pixels = possible_pixels.astype(np.uint8)\n",
+    "\n",
+    "        # Define the structuring element for connected component analysis\n",
+    "        structuring_element = generate_binary_structure(3, 1)  # 3x3x3 connectivity\n",
+    "        # Perform connected component labeling\n",
+    "        labeled_mask, _ = label(possible_pixels, structure=structuring_element)\n",
+    "\n",
+    "        intersection = labeled_mask*seed\n",
+    "        ideal_group = np.max(intersection)\n",
+    "\n",
+    "        # use ideal group\n",
+    "        mask = labeled_mask == ideal_group\n",
+    "        mask = mask.astype(np.uint8)\n",
+    "\n",
+    "        return mask\n",
+    "    \n",
+    "    def segment(self):\n",
+    "        # given the images found in the input dir\n",
+    "        image_paths = list(self.input_dir.glob(\"*\"))\n",
+    "        image_path = image_paths[0] # loop here\n",
+    "\n",
+    "        # create prob map\n",
+    "        self.prob_map(image_path)\n",
+    "        # create seed\n",
+    "        self.seed_definition()\n",
+    "        # postprocess\n",
+    "        mask = self.postprocess()\n",
+    "        # save\n",
+    "        mask = sitk.GetImageFromArray(mask)\n",
+    "        # write\n",
+    "        sitk.WriteImage(mask, str(self.output_dir / ('MASK_'+image_path.name.split('_')[1])))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -162,41 +261,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/home/ricardo/ABUS2023_documents/tdsc_abus23/input/DATA_101.nrrd')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "image_paths = list(segmenter.input_dir.glob(\"*\"))\n",
-    "image_path = image_paths[0]\n",
-    "image_path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 348/348 [00:02<00:00, 129.36it/s]\n",
-      "Processing slices: 100%|██████████| 11/11 [00:13<00:00,  1.20s/it]\n",
-      "Processing slices: 100%|██████████| 11/11 [00:10<00:00,  1.10it/s]\n",
-      "Processing slices: 100%|██████████| 11/11 [00:10<00:00,  1.07it/s]\n",
-      "Processing slices: 100%|██████████| 11/11 [00:10<00:00,  1.08it/s]\n",
-      "Processing slices: 100%|██████████| 11/11 [00:10<00:00,  1.08it/s]\n"
+      "100%|██████████| 348/348 [00:02<00:00, 129.61it/s]\n",
+      "Processing slices: 100%|██████████| 11/11 [00:10<00:00,  1.01it/s]\n",
+      "Processing slices: 100%|██████████| 11/11 [00:10<00:00,  1.01it/s]\n",
+      "Processing slices: 100%|██████████| 11/11 [00:10<00:00,  1.02it/s]\n",
+      "Processing slices: 100%|██████████| 11/11 [00:10<00:00,  1.02it/s]\n",
+      "Processing slices: 100%|██████████| 11/11 [00:10<00:00,  1.00it/s]\n"
      ]
     },
     {
@@ -210,7 +287,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 348/348 [00:01<00:00, 281.60it/s]\n"
+      "100%|██████████| 348/348 [00:01<00:00, 315.60it/s]\n"
      ]
     },
     {
@@ -222,14 +299,49 @@
     }
    ],
    "source": [
-    "segmenter.prob_map(image_path=image_path)"
+    "segmenter.segment()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Explore examples"
+    "Final seg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# HP\n",
+    "high_threshold = 0.65\n",
+    "\n",
+    "# load seed array\n",
+    "seed = np.load(segmenter.seed_dir / 'seed.npy')\n",
+    "probs = np.load(segmenter.probs_dir / 'prob_map.npy')\n",
+    "\n",
+    "# use high_threshold on prob map\n",
+    "possible_pixels = probs>high_threshold\n",
+    "possible_pixels = possible_pixels.astype(np.uint8)\n",
+    "\n",
+    "# Define the structuring element for connected component analysis\n",
+    "structuring_element = generate_binary_structure(3, 1)  # 3x3x3 connectivity\n",
+    "# Perform connected component labeling\n",
+    "labeled_mask, _ = label(possible_pixels, structure=structuring_element)\n",
+    "\n",
+    "intersection = labeled_mask*seed\n",
+    "ideal_group = np.max(intersection)\n",
+    "\n",
+    "# use ideal group\n",
+    "mask = labeled_mask == ideal_group\n",
+    "mask = mask.astype(np.uint8)\n",
+    "\n",
+    "# save\n",
+    "mask = sitk.GetImageFromArray(mask)\n",
+    "# write\n",
+    "sitk.WriteImage(mask, str(segmenter.output_dir / ('MASK_'+image_path.name.split('_')[1])))"
    ]
   }
  ],
