solved some issues

--- a/experiments/docker/process/structure_play.ipynb
+++ b/experiments/docker/process/structure_play.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,6 +86,7 @@
     "\n",
     "class lesion_seg:\n",
     "    def __init__(self):\n",
+    "        # define paths\n",
     "        self.input_dir = Path('./input/') if docker_running else repo_path / 'input'\n",
     "        self.output_dir = Path('./predict') / 'Segmentation' if docker_running else Path(repo_path / 'predict' / 'Segmentation')\n",
     "        self.output_dir.mkdir(parents=True, exist_ok=True) # make sure the output dir exists\n",
@@ -116,8 +117,6 @@
     "\n",
     "\n",
     "        # remove folder if exists, always starts from scratch\n",
-    "        if self.slices_dir.exists():\n",
-    "            shutil.rmtree(self.slices_dir)\n",
     "        self.slices_dir.mkdir(exist_ok=True, parents=True)\n",
     "\n",
     "        # transforms\n",
@@ -166,6 +165,7 @@
     "        original_shape = self.save_slices(image_path) # save slices and get original shape\n",
     "        prob_map = self.md.process_image(slices_dir=self.slices_dir, original_shape=original_shape)\n",
     "        # save the prob map as numpy array\n",
+    "        self.probs_dir.mkdir(exist_ok=True, parents=True)\n",
     "        np.save(self.probs_dir / 'prob_map.npy', prob_map)\n",
     "\n",
     "    def seed_definition(self):\n",
@@ -227,23 +227,27 @@
     "    def segment(self):\n",
     "        # given the images found in the input dir\n",
     "        image_paths = list(self.input_dir.glob(\"*\"))\n",
-    "        image_path = image_paths[0] # loop here\n",
-    "\n",
-    "        # create prob map\n",
-    "        self.prob_map(image_path)\n",
-    "        # create seed\n",
-    "        self.seed_definition()\n",
-    "        # postprocess\n",
-    "        mask = self.postprocess()\n",
-    "        # save\n",
-    "        mask = sitk.GetImageFromArray(mask)\n",
-    "        # write\n",
-    "        sitk.WriteImage(mask, str(self.output_dir / ('MASK_'+image_path.name.split('_')[1])))\n"
+    "        \n",
+    "        for image_path in image_paths:\n",
+    "            \n",
+    "            print(f'Processing patient: {image_path.name.split(\"_\")[1].split(\".\")[0]}')\n",
+    "            if self.cached_dir.exists(): # always start from scratch\n",
+    "                shutil.rmtree(self.cached_dir)\n",
+    "            # create prob map\n",
+    "            self.prob_map(image_path)\n",
+    "            # create seed\n",
+    "            self.seed_definition()\n",
+    "            # postprocess\n",
+    "            mask = self.postprocess()\n",
+    "            # save\n",
+    "            mask = sitk.GetImageFromArray(mask)\n",
+    "            # write\n",
+    "            sitk.WriteImage(mask, str(self.output_dir / ('MASK_'+image_path.name.split('_')[1])))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -251,29 +255,20 @@
      "output_type": "stream",
      "text": [
       "Models loaded on CUDA\n",
-      "Successfully loaded models\n"
+      "Successfully loaded models\n",
+      "Processing patient: 101\n"
      ]
-    }
-   ],
-   "source": [
-    "segmenter = lesion_seg()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 348/348 [00:02<00:00, 129.61it/s]\n",
+      "100%|██████████| 348/348 [00:02<00:00, 126.54it/s]\n",
+      "Processing slices: 100%|██████████| 11/11 [00:10<00:00,  1.02it/s]\n",
       "Processing slices: 100%|██████████| 11/11 [00:10<00:00,  1.01it/s]\n",
       "Processing slices: 100%|██████████| 11/11 [00:10<00:00,  1.01it/s]\n",
-      "Processing slices: 100%|██████████| 11/11 [00:10<00:00,  1.02it/s]\n",
-      "Processing slices: 100%|██████████| 11/11 [00:10<00:00,  1.02it/s]\n",
-      "Processing slices: 100%|██████████| 11/11 [00:10<00:00,  1.00it/s]\n"
+      "Processing slices: 100%|██████████| 11/11 [00:10<00:00,  1.00it/s]\n",
+      "Processing slices: 100%|██████████| 11/11 [00:10<00:00,  1.01it/s]\n"
      ]
     },
     {
@@ -287,61 +282,88 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 348/348 [00:01<00:00, 315.60it/s]\n"
+      "100%|██████████| 348/348 [00:01<00:00, 309.90it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The shape of the final output is (348, 682, 865)\n"
+      "The shape of the final output is (348, 682, 865)\n",
+      "Processing patient: 102\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 350/350 [00:02<00:00, 131.25it/s]\n",
+      "Processing slices: 100%|██████████| 11/11 [00:11<00:00,  1.02s/it]\n",
+      "Processing slices: 100%|██████████| 11/11 [00:11<00:00,  1.02s/it]\n",
+      "Processing slices: 100%|██████████| 11/11 [00:11<00:00,  1.03s/it]\n",
+      "Processing slices: 100%|██████████| 11/11 [00:11<00:00,  1.02s/it]\n",
+      "Processing slices: 100%|██████████| 11/11 [00:11<00:00,  1.01s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The shape of the accumulated mask is torch.Size([350, 2, 512, 512])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 350/350 [00:01<00:00, 306.57it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The shape of the final output is (350, 682, 865)\n",
+      "Processing patient: 100\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 353/353 [00:02<00:00, 129.85it/s]\n",
+      "Processing slices: 100%|██████████| 12/12 [00:11<00:00,  1.06it/s]\n",
+      "Processing slices: 100%|██████████| 12/12 [00:11<00:00,  1.05it/s]\n",
+      "Processing slices: 100%|██████████| 12/12 [00:11<00:00,  1.07it/s]\n",
+      "Processing slices: 100%|██████████| 12/12 [00:11<00:00,  1.08it/s]\n",
+      "Processing slices: 100%|██████████| 12/12 [00:11<00:00,  1.05it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The shape of the accumulated mask is torch.Size([353, 2, 512, 512])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 353/353 [00:01<00:00, 309.39it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The shape of the final output is (353, 682, 865)\n"
      ]
     }
    ],
    "source": [
+    "segmenter = lesion_seg()\n",
     "segmenter.segment()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Final seg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# HP\n",
-    "high_threshold = 0.65\n",
-    "\n",
-    "# load seed array\n",
-    "seed = np.load(segmenter.seed_dir / 'seed.npy')\n",
-    "probs = np.load(segmenter.probs_dir / 'prob_map.npy')\n",
-    "\n",
-    "# use high_threshold on prob map\n",
-    "possible_pixels = probs>high_threshold\n",
-    "possible_pixels = possible_pixels.astype(np.uint8)\n",
-    "\n",
-    "# Define the structuring element for connected component analysis\n",
-    "structuring_element = generate_binary_structure(3, 1)  # 3x3x3 connectivity\n",
-    "# Perform connected component labeling\n",
-    "labeled_mask, _ = label(possible_pixels, structure=structuring_element)\n",
-    "\n",
-    "intersection = labeled_mask*seed\n",
-    "ideal_group = np.max(intersection)\n",
-    "\n",
-    "# use ideal group\n",
-    "mask = labeled_mask == ideal_group\n",
-    "mask = mask.astype(np.uint8)\n",
-    "\n",
-    "# save\n",
-    "mask = sitk.GetImageFromArray(mask)\n",
-    "# write\n",
-    "sitk.WriteImage(mask, str(segmenter.output_dir / ('MASK_'+image_path.name.split('_')[1])))"
    ]
   }
  ],
